fix: controls wrap when there are many images

--- a/assets/base_style.css
+++ b/assets/base_style.css
@@ -285,7 +285,7 @@ nav {
             width: 100%;
             scroll-snap-align: start;
             flex-shrink: 0;
-            aspect-ratio: 5 / 3;
+            aspect-ratio: 4 / 3;
             object-fit: contain;
 
             transition: transform var(--transition);
@@ -295,6 +295,7 @@ nav {
         display: flex;
         justify-content: center;
         align-items: center;
+        flex-wrap: wrap;
         margin-top: 1em;
 
         a {
